# aliens

./: main.py  profile.bat  pyproject.toml
aliens/: colors.py  components.py  items.py  logging_helper.py  rtenvironment.py  states.py  symbols.py  tasks.py  terminal_updates.py  world.py
aliens/tasks/: alien_drone_tasks.py  tasks.py
tests/: test_aliens.py
