[tool.poetry]
name = "aliens"
version = "0.1.0"
description = ""
authors = ["Ian <exor2008@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
bearlibterminal = "^0.15.7"
simpy = "^4.0.1"
numba = "^0.55.1"
tcod = "^13.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
